# audacious-plugins

src/amidiplug/: i_configure.cc  meson.build
src/amidiplug/backend-alsaseq/: b-alsaseq.cc
